--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <html>    
 <head>    
     <meta charset="utf-8">    
-    <title>www.vijayakumar.com</title>    
+    <title>naadankozhi.github.io</title>    
 </head>    
 <font color="#A6ACAF" size="5">    
-    <marquee><b><i>THANKS FOR WATCHING</i></b></marquee>    
+    <marquee><b><i>Contact us on the phone number 1234567890 </i></b></marquee>    
 </font>    
-<body background="C:\Users\vijayakumar\Pictures\photo29.jpg" link="white" alink="blue" vlink="#F8F8FF" > //background image  
+<body background="rooster.jpg" link="white" alink="blue" vlink="#F8F8FF" > //background image  
     <br />    
                
-        <font face="Lato" size="5"><img src="C:\Users\vijayakumar\Pictures\logo.jpg" height="50px" width="100px"></font>//logo image  
+        <font face="Lato" size="5"><img src="rooster_logo.JPG" height="50px" width="100px"></font>//logo image  
                                
         <font face="cinzel" size="4">    
             <a href="#">HOME</a>    
@@ -29,13 +29,13 @@
     <br />    
     <h1 align="center">    
         <font color="#F0B27A" size="9" >    
-            WELCOME TO WEB PAGE<br/>    
+            WELCOME TO THE WORLD of NAADAN KOZHI<br/>    
     </font>    
-    SIMPLE WEB PAGE     
+    NAADAN KOZHI     
     </h1>    
     <h3 align="center">    
         <font face="Lato" color="red" size="3">    
-            Onyly Using Simple HTML Code    
+            Manathampully, Kallukoottiyal, Polpully.    
         </font>    
     <br /><br /><br /><br /><br /><br/><br/><br/><br/>    
     <hr width="1500px">    
@@ -57,7 +57,7 @@
         <a href ="#"> Ideas |    
         <a href ="#"> Certifications    
     </a><br/><br/>    
-            <font color="#FF0000">all@copyrights 2020</font>    
+            <font color="#FF0000">naadankozhi@copyrights 2021</font>    
     </font>    
     </b>    
     </center>    
