--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <font color="#A6ACAF" size="5">    
     <marquee><b><i>Contact us on the phone number 1234567890 </i></b></marquee>    
 </font>    
-<body background="rooster.jpg" link="white" alink="blue" vlink="#F8F8FF" > //background image  
+<body background="rooster.jpg" link="white" alink="blue" vlink="#F8F8FF" >   
     <br />    
                  
     <br /><br /><br /><br />    
@@ -15,13 +15,11 @@
     <h1 align="center">    
         <font color="#F0B27A" size="9" >    
             WELCOME TO THE WORLD of NAADAN KOZHI<br/>    
-    </font face="Lato" color="red" size="5">    
-    By Shiju. 
-    </font>     
+    
     </h1>    
     <h3 align="center">    
-        <font face="Lato" color="red" size="3">    
-            Manathampully, Kallukoottiyal, Polpully.    
+        <font face="Lato" color="red" size="6">    
+            By Shiju , Manathampully, Kallukoottiyal, Polpully.    
         </font>    
     <br /><br /><br /><br /><br /><br/><br/><br/><br/>    
     <hr width="1500px">    
