--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <font color="#A6ACAF" size="5">    
     <marquee><b><i>Contact us on the phone number 1234567890 </i></b></marquee>    
 </font>    
-<body background="rooster.jpg" link="white" alink="blue" vlink="#F8F8FF" >   
+<body background="rooster2.jpg" link="white" alink="blue" vlink="#F8F8FF" >   
     <br />    
                  
     <br /><br /><br /><br />    
