--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">    
     <title>naadankozhi.github.io</title>    
 </head>    
-<font color="#A6ACAF" size="5">    
+<font color="#F0B27A" size="5">    
     <marquee><b><i>Contact us on the phone number 1234567890 </i></b></marquee>    
 </font>    
 <body background="rooster2.jpg" link="white" alink="blue" vlink="#F8F8FF" >   
