--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>naadankozhi.github.io</title>    
 </head>    
 <font color="#F0B27A" size="5">    
-    <marquee><b><i>Contact us on the phone number 1234567890 </i></b></marquee>    
+    <marquee><b><i>Contact us on the phone number +91 7293153780</i></b></marquee>    
 </font>    
 <body background="rooster3.jpg" link="white" alink="blue" vlink="#F8F8FF" >   
     <br />    
